garde/tests/ui/compile-fail/unknown_attr.stderr
error: unrecognized attribute
 --> tests/ui/compile-fail/unknown_attr.rs:2:9
  |
2 | #[garde(unknown_attr)]
  |         ^^^^^^^^^^^^
